# xml2rdf

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: format_check.yml  test_build.yml
src/: convert.rs  lib.rs  main.rs  writer.rs
tests/: integration.rs
tests/resources/: people.xml
