[package]
name = "xml2rdf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
const_format = "0.2.34"
oxrdf = "0.2.4"
oxrdfio = "0.1.6"
uuid = { version = "1.13.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
xml-rs = "0.8.25"

[package.metadata.cargo-machete]
ignored = ["xml-rs"]