[package]
name = "xml2rdf"
version = "0.1.1"
authors = ["bharath181 <bharathselvaraj18@gmail.com>", "Greg Hanson <g.isaac.hanson@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Library for converting an XML file to N-Triple RDF"
repository = "https://github.com/DeciSym/xml2rdf"
readme = "README.md"
keywords = ["xml", "rdf", "semantic-web", "converter", "parser"]
categories = ["command-line-utilities", "encoding", "parser-implementations", "science", "web-programming"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
const_format = "0.2.34"
oxrdf = "0.2.4"
oxrdfio = "0.1.6"
uuid = { version = "1.13.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
xml-rs = "0.8.25"

[package.metadata.cargo-machete]
ignored = ["xml-rs"]